<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        style="?android:listSeparatorTextViewStyle"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ToAddress"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/to_address_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_hint"
            android:textSize="@dimen/text_size"
            android:inputType="textEmailAddress"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        style="?android:listSeparatorTextViewStyle"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Subject"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/subject_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject_hint"
            android:textSize="@dimen/text_size"
            android:inputType="textEmailAddress"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/content_text"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3.5"
        android:gravity="top"
        android:background="@drawable/edit_text"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/send_email_btn"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="7"
        android:background="@drawable/button"
        android:text="@string/send_email"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        />

</LinearLayout>